--- a/src/app/components/login/login.component.css
+++ b/src/app/components/login/login.component.css
@@ -18,7 +18,6 @@ h5 {
     font-size: 12px;
 }
 
-
 .p-inputtext {
     font-weight: 400;
     font-size: 16px;
@@ -37,6 +36,12 @@ h6 {
 div.component-container {
     min-height: 100vh;
     align-items: stretch;
+}
+
+@media(min-width: 768px) {
+    .logo-desktop-container {
+        padding-top: 30dvh;
+    }
 }
 
 @media(min-width: 992px) {
