--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -6,7 +6,7 @@
 
     </div>
 
-    <div class="hidden md:flex md:flex-column md:align-items-center md:justify-content-center md:w-5">
+    <div class="logo-desktop-container hidden md:flex md:flex-column md:align-items-center md:w-5">
         <img class="w-8" src="/assets/logo-tablet-desktop.png" alt="">
         <h6 class="text-center text-white px-5">Sabemos que te gusta salir a tomar algo así que ahora te damos la
             posibilidad de ganar puntos por todo lo que consumas para poder canjerarlos por increíbles promos.</h6>
