--- a/src/app/components/register/register.component.css
+++ b/src/app/components/register/register.component.css
@@ -18,7 +18,6 @@ h5 {
     font-size: 12px;
 }
 
-
 .p-inputtext {
     font-weight: 400;
     font-size: 16px;
@@ -65,6 +64,10 @@ div.component-container {
     ::ng-deep .p-datepicker {
         top: 0px !important;
         left: -224px !important;
+    }
+
+    .logo-desktop-container {
+        padding-top: 30dvh;
     }
 }
 
