Ajustes de visualización en business

--- a/src/app/components/business/business.component.html
+++ b/src/app/components/business/business.component.html
@@ -22,12 +22,12 @@
         <!-- tables-container -->
         <div class="flex flex-col justify-center items-center bg-teal-50 mt-10">
             <!-- Contenedor promotions -->
-            <div class="mb-4">
+            <div class="mb-4 w-full">
                 <!-- Contenido de promotions -->
                 <app-promotions></app-promotions>
             </div>
             <!-- Contenedor customers -->
-            <div class="mt-6">
+            <div class="mt-6 w-full">
                 <!-- Contenido de customers -->
                 <app-promotions></app-promotions>
             </div>
