--- a/src/app/components/business/promotions/promotions.component.css
+++ b/src/app/components/business/promotions/promotions.component.css
@@ -4,3 +4,13 @@
     border-radius: 0.25rem;
     border-width: 0px !important;
 }
+
+:host ::ng-deep .custom-icon-container:hover .pi-pencil {
+    color: white !important;
+    transition: all 0.5s ease-in-out;
+}
+
+:host ::ng-deep .custom-icon-container:hover .pi-trash {
+    color: white !important;
+    transition: all 0.5s ease-in-out;
+}
