--- a/src/app/components/business/promotions/promotions.component.html
+++ b/src/app/components/business/promotions/promotions.component.html
@@ -1,10 +1,10 @@
 <div class="pt-4">
     <p-table 
         [value]="promotions"  
-        [(selection)]="selectedPromotions" 
         dataKey="code" 
         [rows]="10"
         [paginator]="true"
+        class="px-10"
     >
         <ng-template pTemplate="caption">
             <div class="flex align-items-center justify-content-between">
@@ -17,9 +17,6 @@
         </ng-template>
         <ng-template pTemplate="header">
             <tr>
-                <th style="width: 4rem">
-                    <p-tableHeaderCheckbox></p-tableHeaderCheckbox>
-                </th>
                 <th>Título</th>
                 <th>Imagen</th>
                 <th>Descripción</th>
@@ -28,15 +25,21 @@
             </tr>
         </ng-template>
         <ng-template pTemplate="body" let-promotions>
-            <tr class="text-xl">
-                <td>
-                    <p-tableCheckbox [value]="promotions"></p-tableCheckbox>
-                </td>
+            <tr class="text-xl mx-10">
                 <td>{{promotions.title}}</td>
                 <td><img src="../../../assets/img/Rectangle 7.png" width="100" class="shadow-4" /></td>
                 <td>{{promotions.description}}</td>
                 <td><span class="text-pink-600 font-normal">{{promotions.points}}</span> puntos</td>
-                <td>Acciones</td>
+                <td>
+                    <div class="flex">
+                        <div class="flex items-center justify-center rounded-md w-5 h-8 border-2 border-gray-300 hover:bg-pink-400 hover:border-white custom-icon-container">
+                            <i class="pi pi-pencil text-gray-700 cursor-pointer"></i>
+                        </div>
+                        <div class="flex items-center justify-center rounded-md w-5 h-8 border-2 border-gray-300 ml-1 hover:bg-pink-400 hover:border-white custom-icon-container">
+                            <i class="pi pi-trash text-gray-700 cursor-pointer"></i>
+                        </div>
+                    </div>
+                </td>
             </tr>
         </ng-template>
     </p-table>
