agregado estilos businessRegister businessLogin

--- a/src/app/components/business-login/business-login.component.css
+++ b/src/app/components/business-login/business-login.component.css
@@ -18,7 +18,6 @@ h5 {
     font-size: 12px;
 }
 
-
 .p-inputtext {
     font-weight: 400;
     font-size: 16px;
@@ -37,6 +36,17 @@ h6 {
 div.component-container {
     min-height: 100vh;
     align-items: stretch;
+    background: linear-gradient(0deg, rgba(98,70,149,1) 0%, rgba(111,199,217,1) 100%);
+}
+
+.button-create-account {
+    border-color: rgb(111,199,217)
+}
+
+@media(min-width: 768px) {
+    .logo-desktop-container {
+        padding-top: 30dvh;
+    }
 }
 
 @media(min-width: 992px) {
