--- a/src/app/components/business-login/business-login.component.html
+++ b/src/app/components/business-login/business-login.component.html
@@ -1,21 +1,17 @@
 <div class="md:flex component-container">
-
-    <div class="md:hidden flex justify-content-center my-5">
-
+    <div class="md:hidden flex justify-content-center my-0 py-5">
         <img class="w-8" src="/assets/logo-mobile.png" alt="">
-
     </div>
-    <div class="hidden md:flex md:flex-column md:align-items-center md:justify-content-center md:w-5">
+    <div class="logo-desktop-container hidden md:flex md:flex-column md:align-items-center md:w-5">
         <img class="w-8" src="/assets/logo-tablet-desktop.png" alt="">
         <h6 class="text-center text-white px-5">Sabemos que te gusta salir a tomar algo así que ahora te damos la
             posibilidad de ganar puntos por todo lo que consumas para poder canjerarlos por increíbles promos.</h6>
     </div>
-    <div class="shadow-md rounded p-4 mx-auto w-90 md:w-7" style="width: 90%; background: rgba(1, 1, 1, 0.8)">
+    <div class="shadow-md rounded p-4 mx-auto w-90 md:w-7 md:border-noround" style="width: 90%; background: rgba(1, 1, 1, 0.9)">
         <div class="flex justify-content-evenly lg:px-8">
             <h3 class="text-white cursor-pointer">CREAR CUENTA</h3>
-            <h3 class="text-white border-bottom-3 pb-1 border-blue-600">INICIAR SESIÓN</h3>
+            <h3 class="button-create-account text-white border-bottom-3 pb-1">INICIAR SESIÓN</h3>
         </div>
-
         <div class="flex flex-column align-items-center">
             <h4 class="text-white mb-0 mt-7">SEGUÍ SUMANDO</h4>
             <h5 class="text-center text-white mt-2 mb-7 px-3 md:px-5 lg:px-8">
@@ -45,9 +41,8 @@
                 </div>
             </div>
             <div class="mb-7 mt-6 text-center">
-                <button 
-                    type="submit"
-                    class="bg-transparent py-3 px-5 text-gray-600 border-solid border-gray-600 border-round-3xl hover:bg-blue-600 hover:border-blue-600 hover:text-white cursor-pointer"
+                <button type="submit"
+                    class="bg-transparent py-3 px-5 text-gray-600 border-solid border-gray-600 border-round-3xl hover:bg-purple-700 hover:border-purple-700 hover:text-white cursor-pointer"
                     (onclick)="onClickEvent()">
                     INICIAR SESIÓN
                 </button>
@@ -55,7 +50,6 @@
         </form>
     </div>
     <div class="text-center text-white md:hidden cursor-pointer">
-        <h6>¿Todavía no tenés una cuenta? Registrate</h6>
+        <h6 class="my-0 py-5">¿Todavía no tenés una cuenta? Registrate</h6>
     </div>
-
 </div>
