Se completa ABM transaction

--- a/src/app/components/transaction-popup/transaction-popup.component.html
+++ b/src/app/components/transaction-popup/transaction-popup.component.html
@@ -2,17 +2,12 @@
 <p-dialog header="Transacción" [(visible)]="visible" [style]="{ width: '50vw' }">
     <div class="flex py-2 justify-content-center">
         <div class="max-w-md mx-auto p-4 border border-gray-300 rounded-lg">
-            <!-- Barra de búsqueda de cliente -->
-            <input [(ngModel)]="searchTerm" placeholder="Buscar Cliente" class="w-full mb-4" />
-            <button type="button" (click)="searchClient()">Buscar</button>
-
-            <!-- Aquí puedes mostrar los resultados de la búsqueda en una lista -->
-            <ul *ngIf="searchResults.length > 0">
-                <li *ngFor="let user of searchResults" (click)="selectedClient = user.username; onClientSelectionChange()">
+            <p-autoComplete [(ngModel)]="selectedClient" [suggestions]="searchResults"
+                (completeMethod)="searchClient($event)" field="username" placeholder="Buscar Cliente">
+                <ng-template let-user pTemplate="item">
                     {{ user.username }}
-                </li>
-            </ul>
-
+                </ng-template>
+            </p-autoComplete>
             <!-- Selector de tipo de transacción (canje o suma de puntos) -->
             <div class="mb-4">
                 <label for="transactionType" class="block font-semibold">Tipo de Transacción</label>
@@ -22,13 +17,13 @@
                     <option value="sumaPuntos">Suma de Puntos</option>
                 </select>
             </div>
-
             <!-- Selector de promoción o campo para puntos -->
             <div class="mb-4" *ngIf="selectedTransactionType === 'canje'">
                 <label for="selectedPromotion" class="block font-semibold">Seleccionar Promoción</label>
                 <select id="selectedPromotion" [(ngModel)]="selectedPromotion" name="selectedPromotion"
                     class="w-full border border-gray-300 rounded p-2">
-                    <!-- Aquí puedes cargar las opciones de promoción -->
+                    <option value="">Seleccionar Promoción</option>
+                    <option *ngFor="let benefit of benefits" [ngValue]="benefit">{{ benefit.benefitname }}</option>
                 </select>
             </div>
             <div class="mb-4" *ngIf="selectedTransactionType === 'sumaPuntos'">
