--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -10,8 +10,10 @@
     <div class="shadow-md rounded p-4 mx-auto w-90 md:w-7 md:border-noround"
         style="width: 90%; background: rgba(1, 1, 1, 0.8)">
         <div class="flex justify-content-evenly lg:px-8">
-            <h3 class="text-white cursor-pointer">CREAR CUENTA</h3>
-            <h3 class="button-create-account text-white border-bottom-3 pb-1">INICIAR SESIÓN</h3>
+            <a href="/register">
+                <h3 class="button-create-account text-white cursor-pointer">CREAR CUENTA</h3>
+            </a>
+            <h3 class="button-log-in text-white border-bottom-3 pb-1">INICIAR SESIÓN</h3>
         </div>
         <div class="flex flex-column align-items-center">
             <h4 class="text-white mb-0 mt-7">SEGUÍ SUMANDO</h4>
