--- a/src/app/components/register/register.component.css
+++ b/src/app/components/register/register.component.css
@@ -60,8 +60,21 @@ div.component-container {
     align-items: stretch;
 }
 
-.button-log-in {
+.button-create-account {
     border-color: rgb(230, 31, 133);
+}
+
+.button-log-in:hover {
+    padding-bottom: 0.25rem !important;
+    color: rgb(230,31,133) !important;
+    border-bottom-width: 3px;
+    border-bottom-style: solid;
+    border-color: rgb(230,31,133);
+}
+
+a:-webkit-any-link {
+    cursor: pointer;
+    text-decoration: none;
 }
 
 @media(min-width: 768px) {
