--- a/src/app/components/business-register/business-register.component.css
+++ b/src/app/components/business-register/business-register.component.css
@@ -57,6 +57,10 @@ a:-webkit-any-link {
     text-decoration: none;
 }
 
+.error-validation {
+    color: rgb(111,199,217) !important;
+}
+
 input#nombre {
     width: 95% !important;
 }
