--- a/src/app/components/business/promotions/promotions.component.html
+++ b/src/app/components/business/promotions/promotions.component.html
@@ -1,6 +1,6 @@
-<div class="pt-4">
+<div>
     <p-table 
-        [value]="promotions"  
+        [value]="benefits"  
         dataKey="code" 
         [rows]="10"
         [paginator]="true"
@@ -24,12 +24,12 @@
                 <th>Acciones</th>
             </tr>
         </ng-template>
-        <ng-template pTemplate="body" let-promotions>
+        <ng-template pTemplate="body" let-benefits>
             <tr class="text-xl mx-10">
-                <td>{{promotions.title}}</td>
+                <td>{{benefits.benefitname}}</td>
                 <td><img src="../../../assets/img/Rectangle 7.png" width="100" class="shadow-4" /></td>
-                <td>{{promotions.description}}</td>
-                <td><span class="text-pink-600 font-normal">{{promotions.points}}</span> puntos</td>
+                <td>B</td>
+                <td><span class="text-pink-600 font-normal">{{benefits.points_req}}</span> puntos</td>
                 <td>
                     <div class="flex">
                         <div class="flex items-center justify-center rounded-md w-5 h-8 border-2 border-gray-300 hover:bg-pink-400 hover:border-white custom-icon-container">
