Modificación en interfaz Benefit para aceptar nuevo dato description

--- a/src/app/components/business/promotions/promotions.component.html
+++ b/src/app/components/business/promotions/promotions.component.html
@@ -28,7 +28,7 @@
             <tr class="text-xl mx-10">
                 <td>{{benefits.benefitname}}</td>
                 <td><img src="../../../assets/img/Rectangle 7.png" width="100" class="shadow-4" /></td>
-                <td>B</td>
+                <td>{{benefits.promotions}}</td>
                 <td><span class="text-pink-600 font-normal">{{benefits.points_req}}</span> puntos</td>
                 <td>
                     <div class="flex">
