Se agrega benefit description en template de promotions y se quita hardcodeo de businessId en método getBusinessBenefits

--- a/src/app/components/business/promotions/promotions.component.html
+++ b/src/app/components/business/promotions/promotions.component.html
@@ -28,8 +28,8 @@
             <tr class="text-xl mx-10">
                 <td>{{benefits.benefitname}}</td>
                 <td><img src="../../../assets/img/Rectangle 7.png" width="100" class="shadow-4" /></td>
-                <td>{{benefits.promotions}}</td>
-                <td><span class="text-pink-600 font-normal">{{benefits.points_req}}</span> puntos</td>
+                <td>{{benefits.description}}</td>
+                <td class="whitespace-nowrap"><span class="text-pink-600 font-normal">{{benefits.points_req}}</span> puntos</td>
                 <td>
                     <div class="flex">
                         <div class="flex items-center justify-center rounded-md w-5 h-8 border-2 border-gray-300 hover:bg-pink-400 hover:border-white custom-icon-container">
